--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,47 +1,52 @@
+{% load staticfiles %}
 <!Doctype Html>
 <html>
-<head>
-<title> {% block head_title %} Voting Cum Blog App {% endblock %} </title>
-{% block cdn_stylesheet %}
-		<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<head>
+		<title> {% block head_title %} Voting Cum Blog App {% endblock %} </title>
+		{% block cdn_stylesheet %}
+				<!-- Latest compiled and minified CSS -->
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+			<!-- Optional theme -->
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+		{% endblock %}
+		
+		{% block external_CSS %}
+			<link rel="stylesheet" href="{% static 'VoteCumBlog/css/base.css' %}">	
+		{% endblock %}
+	</head>
+	<body>
+
+	{% block header %}
+		<div class="container">
+			<div class="page-header">
+				<h1>Voting cum Blog Django App </h1>
+			</div>
+		</div>
+	{% endblock%}
+	
+	{% block content %}
+
+	{% endblock%}	
+
+
+
+	{% block sidebar %}
+		 
+	{% endblock %}
+
+
+
+	{% block footer %}
+		
+	{% endblock %}
+
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-{% endblock %}
-{% block external_CSS %}
-
-{% endblock %}
-</head>
-<body>
-
-{% block header %}
-	<div class="container">
-		<div class="page-header">
-			<h1>Voting cum Blog Django App </h1>
-		</div>
-	</div>
-{% endblock%}
-
-{% block content %}
-
-{% endblock%}	
-
-
-
-{% block sidebar %}
-	 
-{% endblock %}
-
-
-
-{% block footer %}
 	
-{% endblock %}
+	{% block page_js %}
 
-
-</body>
+	{% endblock %}
+	</body>
 </html>
