--- a/src/templates/votecumblog_listView.html
+++ b/src/templates/votecumblog_listView.html
@@ -10,7 +10,7 @@
 					<div class="caption">
 						<h3>{{ obj.title }}</h3>
 						<p> {{ obj.content }} </p>
-						<p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+						<p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">Button</a></p> 
 					</div>
 				</div>
 			</div>
